Update Docs for submission

--- a/HDip_Strategic_Thinking_Semester2.ipynb
+++ b/HDip_Strategic_Thinking_Semester2.ipynb
@@ -15,6 +15,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30996a90",
+   "metadata": {},
+   "source": [
+    "### GitHub Repository: \n",
+    "https://github.com/norodrigues111/Strategic-Thinking-Online-Shoppers-Data-Analysis.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fde2e366",
+   "metadata": {},
+   "source": [
+    "### Dataset Source:\n",
+    "https://www.kaggle.com/datasets/imakash3011/online-shoppers-purchasing-intention-dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0a023cd8",
    "metadata": {
     "id": "0a023cd8"
@@ -225,7 +243,7 @@
    "outputs": [],
    "source": [
     "# loading the data into dataframe.\n",
-    "df = pd.read_csv('../../data/online_shoppers_intention.csv')"
+    "df = pd.read_csv('online_shoppers_intention.csv')"
    ]
   },
   {
